--- a/AudioProject/packages.config
+++ b/AudioProject/packages.config
@@ -4,6 +4,7 @@
   <package id="NAudio" version="2.2.1" targetFramework="net472" />
   <package id="NAudio.Asio" version="2.2.1" targetFramework="net472" />
   <package id="NAudio.Core" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.Extras" version="2.2.1" targetFramework="net472" />
   <package id="NAudio.Midi" version="2.2.1" targetFramework="net472" />
   <package id="NAudio.Wasapi" version="2.2.1" targetFramework="net472" />
   <package id="NAudio.WaveFormRenderer" version="2.0.0" targetFramework="net472" />
