add equalizer feature

--- a/AudioProject/AudioProject.csproj
+++ b/AudioProject/AudioProject.csproj
@@ -111,6 +111,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Equalizer.cs" />
+    <Compile Include="EqualizerBand.cs" />
     <Compile Include="IWaveFormRenderer.cs" />
     <Compile Include="SettingsWindow.xaml.cs">
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
