--- a/AudioProject/packages.config
+++ b/AudioProject/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Extended.Wpf.Toolkit" version="4.6.0" targetFramework="net472" />
-  <package id="Microsoft.Win32.Registry" version="4.7.0" targetFramework="net472" />
+  <package id="Extended.Wpf.Toolkit" version="4.6.1" targetFramework="net472" />
+  <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net472" />
   <package id="NAudio" version="2.2.1" targetFramework="net472" />
   <package id="NAudio.Asio" version="2.2.1" targetFramework="net472" />
   <package id="NAudio.Core" version="2.2.1" targetFramework="net472" />
@@ -11,7 +11,8 @@
   <package id="NAudio.WaveFormRenderer" version="2.0.0" targetFramework="net472" />
   <package id="NAudio.WinForms" version="2.2.1" targetFramework="net472" />
   <package id="NAudio.WinMM" version="2.2.1" targetFramework="net472" />
-  <package id="System.Drawing.Common" version="5.0.1" targetFramework="net472" />
-  <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net472" />
-  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net472" />
+  <package id="Soenneker.Libraries.ytdlp" version="3.0.361" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="9.0.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="6.0.1" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
 </packages>
