--- a/AudioProject/AudioProject.csproj
+++ b/AudioProject/AudioProject.csproj
@@ -118,6 +118,7 @@
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Visualization.cs" />
+    <Compile Include="YouTubeAudioExtractor.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
